--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -390,7 +390,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
@@ -796,7 +796,7 @@ section #title h1 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 40px;
-  text-align: center;
+  text-align: left;
   line-height: 36px;
 }
 section #title p {
@@ -804,7 +804,7 @@ section #title p {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 18px;
-  text-align: center;
+  text-align: left;
 }
 section #title .credits {
   font-size: 11px;
